--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-<body>
+<body style="background: url(assets/bg.png);">
     <header>
         <nav class="container">
             <div class="logo">
                 <img src="assets/logo.png" alt="">
                 <h1>SCHOOL</h1>
             </div>
-
             <ul>
                 <a href="" style="color: orange">Home</a>
                 <a href="" style="color: blue">About</a>
                 <a href="" style="color: rgba(5, 212, 223, 1)">Facilities</a>
                 <a href="" style="color: #5D58EF">Admission</a>
             </ul>
-
             <div>
                 <a href=""><button class="button">Contact</button></a>
             </div>
